2017-12-26 Release 0.3.0

- Modernize module layout and testing.
- Update supported and tested Puppet versions to 4 and 5.
- Many major puppet module dependency updates.
- Pin puppetlabs-stdlib dependency to 4.12.0, as unfortunately saz/sudo still uses the deprecated ``validate_`` functions.

2017-07-17 Release 0.2.1
- Handle upstream chrony service rename to chronyd

2017-07-09 Release 0.2.0
- Bump saz/sudo requirement to 4.2.0+ for Arch Linux bug fix
- Remove "xorg-server-utils" package, which has been removed from repos.

2016-12-05 Release 0.1.5
- add management of /etc/conf.d to archlinux_workstation::docker class, as it may not already exist

2016-09-01 Release 0.1.3
- remove virtualbox-host-modules package in favor of virtualbox-host-dkms
- remove dkms service, as module rebuilding is now handled at install-time via alpm hooks

2016-03-10 Release 0.1.2
- add support for PACKAGER variable in makepkg.conf (via ``archlinux_workstation`` class variable)

2015-11-25 Release 0.1.1
- add support for a '-m' mail command for cronie

2015-09-16 Release 0.1.0
- major ground-up rewrite of module to be more reusable, and targeted at puppet4

2014-03-15 Release 0.0.1
- initial module creation
- migration of a bunch of stuff from https://github.com/jantman/puppet-archlinux-macbookretina